<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormulaResultActivity"
    android:id="@+id/result_activity_layout">


    <TextView
        android:id="@+id/textView"
        android:layout_width="342dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/formula_seleccionada"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/nombre_formula"
        android:layout_width="256dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/valor1"
        android:layout_width="239dp"
        android:layout_height="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/hinta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_formula" />

    <TextView
        android:id="@+id/valor2"
        android:layout_width="239dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/hintb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor1" />

    <TextView
        android:id="@+id/valor3"
        android:layout_width="239dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/hintc"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor2" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="239dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor3" />



</androidx.constraintlayout.widget.ConstraintLayout>